# CSeaHash

./: .gitignore  CMakeLists.txt  README.md  pytest.py
.github/workflows/: cmake.yml
app/: cshdigest.c  timing.sh
include/: seahash.h
src/: seahash.c
test/: test.c
